--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,19 +17,20 @@ on:
 env:
   DOCKER_REPO_NAME: shaylevin89perimeter
   DOCKER_IMAGE_NAME: k-train
+  DOCKERHUB_USER: shaylevin89perimeter
   ENVIRONMENT: dev
   
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag test
+      run: docker build . --file Dockerfile --tag shaylevin89perimeter:v1.0.1
     - name: show images
       run: docker images
+    - name: docker push
+      run: docker push shaylevin89perimeter:v1.0.1
     - name: echo name
       run: echo ${{ github.event.inputs.name }}
