--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,20 +1,20 @@
 name: Docker Image CI
 
 on:
+  workflow_dispatch:
+    inputs:
+      semver_level:
+        type: choice
+        description: semver levek
+        options:
+        - major
+        - minor
+        - patch
+        default: patch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-inputs:
-  semver_level:
-    type: choice
-    description: semver levek
-    options:
-    - major
-    - minor
-    - patch
-    default: patch
 
 env:
   DOCKER_REPO_NAME: shaylevin89perimeter
@@ -27,7 +27,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v3
 #    - name: Build the Docker image
