--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,7 @@ env:
   DOCKERHUB_PASSWD: ${{ secrets.DOCKERHUB_PASSWD }}
   MAKE_LATEST: true
   ENVIRONMENT: dev
+  SEMVER_LEVEL: patch
   
 jobs:
   build:
@@ -38,5 +39,19 @@ jobs:
 #      run: echo $DOCKERHUB_PASSWD | docker login -u $DOCKERHUB_USER --password-stdin
 #    - name: docker push
 #      run: docker push $DOCKER_REPO_NAME/$DOCKER_IMAGE_NAME:v1.0.1
-    - name: echo name
+    - name: echo semver level
       run: echo ${{ github.event.inputs.semver_level }}
+    - name: decide if default
+      run: |
+        if ${{ github.event.inputs.semver_level }}; then
+          echo "SEMVER_LEVEL=${{ github.event.inputs.semver_level }}" >> $GITHUB_ENV
+        else
+          echo "SEMVER_LEVEL=$SEMVER_LEVEL" >> $GITHUB_ENV
+        fi
+    - name: get dockerhub token
+      run: |
+      export TOKEN=$(curl -s -H "Content-Type: application/json" \
+        -X POST -d '{"username": "'${DOCKERHUB_USER}'", "password": "'${DOCKERHUB_PASSWD}'"}' \
+                                   https://hub.docker.com/v2/users/login/ | jq -r .token)
+    - name: get latest version
+      run: echo $TOKEN
