--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,3 +49,5 @@ jobs:
       run: .github/scripts/get_last_tag.sh
     - name: get latest version
       run: echo $TOKEN
+    - name: try py
+      runs: python3 .github/scripts/try.py
